fixed z-index issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -584,7 +584,9 @@ fieldset {
   z-index: 61;
 }
 
-.loading > * {
+.loading > *,
+.guide,
+.credits {
   z-index: 60;
 }
 
